*correct integration of stylesheets (fonts, imgs) *disabled contrast mode *styling print.php for feedback and books

--- a/theme/mebis/scss/_layout.scss
+++ b/theme/mebis/scss/_layout.scss
@@ -77,7 +77,7 @@
             cursor: default;
             pointer-events: none;
             opacity: 0.65;
-            background: url($img-path + "button-disabled-texture.png"), lighten($brand-primary, 25%) !important;
+            background: url([[pix:theme|button-disabled-texture]]), lighten($brand-primary, 25%) !important;
         }
 
         &.link-center {
@@ -130,7 +130,7 @@
         &.disabled-pattern {
             border-color: lighten($brand-primary, 25%) !important;
             cursor: default;
-            background: url($img-path + "button-disabled-texture.png"), lighten($brand-primary, 25%) !important;
+            background: url([[pix:theme|button-disabled-texture]]), lighten($brand-primary, 25%) !important;
         }
     }
 
@@ -3036,20 +3036,20 @@
                     display: inline-block;
 
                     &.logo-first  {
-                        background: url($img-path + "footer-logo-1.png");
+                        background: url([[pix:theme|footer-logo-1]]);
                         width: 260px;
                         height: 49px;
                     }
 
                     &.logo-second {
-                        background: url($img-path + "footer-logo-2.png");
+                        background: url([[pix:theme|footer-logo-2]]);
                         width: 32px;
                         height: 49px;
                         margin-left: 20px;
                     }
 
                     &.logo-third  {
-                        background: url($img-path + "footer-logo-3.png");
+                        background: url([[pix:theme|footer-logo-3]]);
                         width: 44px;
                         height: 33px;
                         margin-left: 20px;
