--- a/theme/mebis/scss/moodle/_cu-courseformats.scss
+++ b/theme/mebis/scss/moodle/_cu-courseformats.scss
@@ -54,7 +54,7 @@
     .the_toggle:before {
 
         float:right;
-        font-family: 'mebis-icons';
+        font-family: mebis-icons;
         speak: none;
         font-style: normal;
         font-weight: normal;
